# TarsGateway

./: CMakeLists.txt
conf/: GatwayServer.conf
src/: CMakeLists.txt  FlowControl.h  GatewayServer.cpp  GatewayServer.h  ProxyImp.cpp  ProxyImp.h  admins.auths.tars  admins.h  admins_auths.h
src/CidProxy/: CidProxyImp.cpp  CidProxyImp.h
src/MqThread/: RabbitMq.cpp  RabbitMq.h  main.cpp  main.h
src/RoomIdMgr/: StateIdMgr.cpp  StateIdMgr.h
src/WSUser/: WSUser.cpp  WSUser.h
src/proxybase/: ProxyParam.h  ProxyUtils.h
src/tarsdepend/LoginServer/: login.h  login.tars  loginMq.h  loginMq.tars
src/tupproxy/: TupBase.cpp  TupBase.h  TupCallback.cpp
src/websocket/: t.cpp  vectorwrapbuf.h  websocket_adpt.cpp  websocket_adpt.h
src/websocket/3rd/websocket_parser/: base64.hpp  sha1.hpp  websocket_parser.c  websocket_parser.h
